app/components/swiper/swiper.module.css
.container {
    position: relative;
}

.prevArrowWrapper,
.nextArrowWrapper {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    z-index: 10;
}

.prevArrowWrapper {
    right: calc(100% + 30px);
}

.nextArrowWrapper {
    left: calc(100% + 30px);
}

.prevArrow,
.nextArrow {
    position: relative;
    cursor: pointer;
    flex-shrink: 0;
    width: 32px;
    height: 32px;
    border-radius: 50%;
    overflow: hidden;
    background-color: #505050;
}

.prevArrow>svg,
.nextArrow>svg {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 1px;
    fill: #fff;
}

.prevArrow {
    transform: rotate(180deg);
}

.pagination {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: .5rem;
    margin-block: 1.5rem;
}

.paginationGallery>span {
    background-color: #fff;
}

.prevArrowWrapper,
.nextArrowWrapper {
    top: 0;
    bottom: 0;
    transform: inherit;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.prevArrowWrapper {
    left: 10px;
    right: inherit;
    padding-right: 2rem;
}

.nextArrowWrapper {
    right: 10px;
    left: inherit;
    padding-left: 2rem;
}

.slide {
    user-select: none;
}

.transparentLeft {
    position: absolute;
    top: 0;
    left: 0;
    width: 8%;
    height: 100%;
    z-index: 10;
    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
}

.transparentRight {
    position: absolute;
    top: 0;
    right: 0;
    width: 8%;
    height: 100%;
    z-index: 10;
    background: linear-gradient(-90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
}

.transparentLeft.gallery {
    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
}

.transparentRight.gallery {
    background: linear-gradient(-90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
}

@media (width <= 768px) {

    .prevArrow,
    .nextArrow {
        display: none;
    }

    .pagination {
        gap: inherit;
    }

    .prevArrowWrapperGallery,
    .nextArrowWrapperGallery {
        display: none;
    }
}

